# gd-notification-mod

./: CMakeLists.txt  mod.json  yourname.notification.geode
.github/workflows/: build.yml
src/: main.cpp
